overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,10 @@
 */
 
 /* Reset */
+*{
+	overflow-x: hidden;
+}
+
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -1905,6 +1909,7 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		overflow: hidden;
 	}
 
 		input[type="submit"].icon,
